--- a/src/static/css/calendar.scss
+++ b/src/static/css/calendar.scss
@@ -6,27 +6,31 @@
   top: 0;
   width: 100%;
   z-index: -1;
-  &.on{
+
+  &.on {
     z-index: 0;
   }
+
   .calendar-bottom {
     position: absolute;
     bottom: 0;
     width: 100%;
     transform: translateY(100%);
     transition: all.3s;
-    z-index:100;
-    &.on{
-      transform: translateY(0);
+    z-index: 100;
 
+    &.on {
+      transform: translateY(0);
     }
+
     .calendar-header {
       height: 45px;
       line-height: 45px;
       text-align: center;
       background-color: #f5f5f5;
       color: $normal-color;
-      .calendar-cancel{
+
+      .calendar-cancel {
         position: absolute;
         left: 0;
         top: 0;
@@ -59,6 +63,7 @@
       height: 470px;
       overflow: scroll;
       -webkit-overflow-scrolling: touch;
+
       .calendar-month {
         text-align: center;
         font-size: 16px;
@@ -78,14 +83,15 @@
           font-weight: 400;
           vertical-align: middle;
 
-
-          &.calendar-special{
-              color: #ff5555;
+          &.calendar-special {
+            color: #ff5555;
           }
-          &.calendar-on{
+          &.calendar-on {
             background: #4289ff;
             color: #fff;
           }
+
+
           .calendar-day {
             line-height: 21px;
             font-size: 14px;
@@ -100,23 +106,27 @@
           &:nth-of-type(7n+1) {
             color: #ff5555;
           }
+
           &:nth-of-type(7n).calendar-on,
           &:nth-of-type(7n+1).calendar-on {
             color: #fff;
+          }
+          &.calendar-date-invalid {
+            color: #b2b2b2;
           }
         }
       }
     }
   }
-  .calendar-modal{
+
+  .calendar-modal {
     background: $modal-color;
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-    z-index:10;
-    transition: all .3s;
+    z-index: 10;
+    transition: all 0.3s;
   }
-
 }
